# ar

./: .gitignore  CALIBRATION.js  README.md  app.config.js  app.json  app.jsonBCKP  babel.config.js  config.jsonBCKP  debug.mjs  eas.json  jest.config.js  jest.setup.ts  metro.config.js  package-lock.json  package.json  tsconfig.json
__tests__/: beta.test.js  cumquat-ios-integration.test.js  gestures.test.ts  landscapeRightOrientation.test.ts  northAlignedOrientation.test.ts  sensorHub.heading.test.ts  sensors.test.ts
app/: _layout.tsx
components/: ARBetaLandscapeView.tsx  ARBetaNativeOverlayView.tsx  ARPermissionGate.tsx  DebugClippedOverlay.tsx  ExternalLink.tsx
contexts/: LanguageContext.js  OrientationContext.tsx  translations.js
cumquat/: ADDTOSENSORS.ts  constants.js  gestures.tsBCK  landscapeRightOrientation.ts  nativeProjectionDebug.ts  northAlignedOrientation.ts  (+4 more)
modules/cumquat-native/: CMakeLists.txt  CumquatNative.podspec  IOS_RUNTIME.md  README.md  package.json
modules/cumquat-native/cpp/bridge/: NativeCumquatModule.cpp  NativeCumquatModule.h
modules/cumquat-native/cpp/core/: Engine.cpp  Engine.h  Types.h
modules/cumquat-native/cpp/geo/: Geodesy.cpp  Geodesy.h
modules/cumquat-native/cpp/math/: Vec3.h
modules/cumquat-native/cpp/projection/: Projection.cpp  Projection.h
modules/cumquat-native/ios/: NativeCumquatModuleProvider.h  NativeCumquatModuleProvider.mm
modules/cumquat-native/specs/: NativeCumquat.ts
modules/cumquat-native/src/: CumquatEngine.ts  NativeCumquat.ts  index.ts  types.ts
modules/cumquat-native/tests/: core_test.cpp
(+62 files in other folders)
